trivial changes in link urls

--- a/photo.html
+++ b/photo.html
@@ -45,7 +45,7 @@ function MM_controlSound(x, _sndObj, sndFile) { //v3.0
 <table width="100%" border="0" cellspacing="0" cellpadding="4">
   <tr>
       <td bgcolor=""><p><a href="index.html"><img src="pic/logo2.jpg" name="Logo" width="149" height="69" border="0" style="background-color: #CCCC99" /></a></p></td>
-    <td align="right" bgcolor=""><span><a href="graph.html" class="STYLE1">Design</a> &#149;<a href="Blog.html" class="STYLE1">Blog</a></span></td>
+    <td align="right" bgcolor=""><span><a href="graph.html" class="STYLE1">Design</a> &#149;<a href="blog.html" class="STYLE1">Blog</a></span></td>
   </tr>
 </table>
 
