--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@ function MM_controlSound(x, _sndObj, sndFile) { //v3.0
 <table width="100%" border="0" cellspacing="0" cellpadding="4">
   <tr>
     <td bgcolor=""><p onfocus="MM_controlSound('play','document.CS1239113782390','audio/music.mp3')"><a></a><span class="STYLE3"><img src="pic/logo2.jpg" width="149" height="69" /></span></p></td>
-    <td align="right" bgcolor="" class="STYLE3"><span><a href="index.html" class="STYLE3">Home</a> &#149;<a href="contact.html" class="STYLE3">Resume</a></span></td>
+    <td align="right" bgcolor="" class="STYLE3"><span><a href="index.html" class="STYLE3">Home</a> &#149;<a href="photo.html" class="STYLE3">Photography</a></span></td>
   </tr>
 </table>
 
