added blog page, clean up some code

--- a/blog.html
+++ b/blog.html
@@ -1,77 +1,28 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
-<title>Linki's kaleidoscope</title>
-<style type="text/css">
-<!--
-body {
-	background-image: url(pic/bg_graystar.gif);
-}
-
-.STYLE3 {
-	font-size: 18px;
-    color: #000000;
-	font-family: "Kunstler Script";
-}
--->
-</style>
-
-<script type="text/JavaScript">
-<!--
-function MM_controlSound(x, _sndObj, sndFile) { //v3.0
-  var i, method = "", sndObj = eval(_sndObj);
-  if (sndObj != null) {
-    if (navigator.appName == 'Netscape') method = "play";
-    else {
-      if (window.MM_WMP == null) {
-        window.MM_WMP = false;
-        for(i in sndObj) if (i == "ActiveMovie") {
-          window.MM_WMP = true; break;
-        } 
-      }
-      if (window.MM_WMP) method = "play";
-      else if (sndObj.FileName) method = "run";
-  } }
-  if (method) eval(_sndObj+"."+method+"()");
-  else window.location = sndFile;
-}
-//-->
-</script>
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" / >
+    <title>Linki's Kaleidoscope</title>
+    <link rel="stylesheet" href="css/mainsty.css">
 </head>
+
 <body>
-<table width="100%" border="0" cellspacing="0" cellpadding="4">
+<table width=100%>
   <tr>
-    <td bgcolor=""><p onfocus="MM_controlSound('play','document.CS1239113782390','audio/music.mp3')"><a></a><span class="STYLE3"><img src="pic/logo2.jpg" width="149" height="69" /></span></p></td>
-    <td align="right" bgcolor="" class="STYLE3"><span><a href="index.html" class="STYLE3">Home</a> &#149;<a href="work.html" class="STYLE3">Projects</a></span></td>
+      <td align="left"><a href="index.html"><img src="pic/logo2.jpg" id="logo2" width=149 height=69 border=0 /></a></td>
+      <td align="right">
+        <p><span><a href="blog.html" class="suburls">Today</a></span>&nbsp;&#149;&nbsp;<a href="blog.html" class="suburls">Prev Article</a></p>
+    </td>
   </tr>
 </table>
 
-<!--
+<p>&nbsp;</p>
 <div align="center">
-  <p>&nbsp;</p>
-  <table width="649" height="464" border="0">
-    <tr>
-      <td width="643" height="460">
-      <div align="center">
-        <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="560" height="560" align="right">
-          <param name="flash_component" value="ImageViewer.swc" />
-          <param name="movie" value="audio/photo.swf" />
-          <param name="quality" value="high" />
-          <param name="FlashVars" value="flashlet={imageLinkTarget:'_blank',captionFont:'Verdana',titleFont:'Verdana',showControls:true,frameShow:false,slideDelay:5,captionSize:10,captionColor:#333333,titleSize:10,transitionsType:'Photo',titleColor:#333333,slideAutoPlay:false,imageURLs:['graph/a.jpg','graph/b.jpg','graph/c.jpg','graph/d.jpg','graph/e.jpg','graph/f.jpg'],slideLoop:false,frameThickness:2,imageLinks:['http://macromedia.com/','http://macromedia.com/','http://macromedia.com/'],frameColor:#333333,bgColor:#FFFFFF,imageCaptions:[]}" />          
-          <embed src="audio/photo.swf" width="400" height="325" align="right" quality="high" flashvars="flashlet={imageLinkTarget:'_blank',captionFont:'Verdana',titleFont:'Verdana',showControls:true,frameShow:false,slideDelay:5,captionSize:10,captionColor:#333333,titleSize:10,transitionsType:'Photo',titleColor:#333333,slideAutoPlay:false,imageURLs:['audio/img1.jpg','audio/img2.jpg','audio/img3.jpg','audio/img4.jpg','audio/img5.jpg','audio/img6.jpg'],slideLoop:false,frameThickness:2,imageLinks:['http://macromedia.com/','http://macromedia.com/','http://macromedia.com/'],frameColor:#333333,bgColor:#FFFFFF,imageCaptions:[]}" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash"> </embed>
-        </object>
-      </div>
-      </td> 
-    </tr>
-  </table>
+    <img src="pic/bg_blog.png" id="article"></img>
 </div>
--->
 
-<p class="STYLE3" align="center">This is my blog page. All rights reserved.</p>
-
-<embed name='CS1239113782390' src='audio/14.You.mp3' loop=true autostart=true mastersound hidden=true width=0 height=0></embed>
-
+<p>&nbsp;</p>
+<embed src="audio/music.mp3" loop=true autostart=true mastersound hiddent=true width=0 height=0></embed>
 </body>
+
 </html>
