--- a/work.html
+++ b/work.html
@@ -16,8 +16,8 @@
     </td>
   </tr>
 </table>
-
 <p class="body" align="center">This is repository of my projects. All rights reserved.</p>
-    
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="lxylinki"><a class="LI-simple-link" href='https://cn.linkedin.com/in/lxylinki?trk=profile-badge'>Xiangyu Lin</a></div>
 </body>
 </html>
