--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
 <p class="body" align="center">This is repository of my projects. All rights reserved.</p>
 <p class="body" align="center">You can find some of my works in the past at: https://www.researchgate.net/profile/Xiangyu_Lin</p>
 
-<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="lxylinki"><a class="LI-simple-link" href='https://cn.linkedin.com/in/lxylinki?trk=profile-badge'>Xiangyu Lin</a></div>
+<!--<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>-->
+<!--<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="lxylinki"><a class="LI-simple-link" href='https://cn.linkedin.com/in/lxylinki?trk=profile-badge'>Xiangyu Lin</a></div>-->
 </body>
 </html>
