--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <td align="right">
         <p><span><a href="blog.html" class="suburls">Blog</a></span>&nbsp;&#149;&nbsp;<a href="work.html" class="suburls">Projects</a></p>
-        <p><span><a href="graph.html" class="suburls">Design</a></span>&nbsp;&#149;&nbsp;<a href="photo.html" class="suburls">Photography</a></p>
+        <p><span><a href="graph.html" class="suburls">Design</a></span>&nbsp;&#149;&nbsp;<a href="photo.html" class="suburls"> &#x1F320; Photography</a></p>
     </td>
   </tr>
 </table>
