--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <td align="left"><img src="pic/logo2.jpg" id="logo2" width=149 height=69 border=0 /></td>
 
     <td align="right">
-        <p><span> &#x1F943; <a href="blog.html" class="suburls">Blog</a></span>&nbsp;&#149;&nbsp;<a href="work.html" class="suburls">Projects</a></p>
+        <p><span> &#x1F943; <a href="blog.html" class="suburls">Blog</a></span>&nbsp;&#149;&nbsp; &#x2601; <a href="work.html" class="suburls">Projects</a></p>
         <p><span><a href="graph.html" class="suburls">Design</a></span>&nbsp;&#149;&nbsp; &#x1F5A4; <a href="photo.html" class="suburls">Photography</a></p>
     </td>
   </tr>
