--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>This is Linki's Kaleidoscope</h1>
+<h1>&#x1FA90; This is Linki's Kaleidoscope &#x2728;</h1>
     
 <table width=100%>
   <tr>
