--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
   <tr>
       <td align="left"><a href="index.html"><img src="pic/logo2.jpg" id="logo2" width=149 height=69 border=0 /></a></td>
       <td align="right">
-        <p><span><a href="blog.html" class="suburls">Today</a></span>&nbsp;&#149;&nbsp;<a href="blog.html" class="suburls">Prev Article</a></p>
+        <p><span> &#x1F407; <a href="blog.html" class="suburls">Today</a></span>&nbsp;&#149;&nbsp;<a href="blog.html" class="suburls">Prev Article</a></p>
     </td>
   </tr>
 </table>
