--- a/graph.html
+++ b/graph.html
@@ -12,7 +12,7 @@
       <td align="left"><a href="index.html"><img src="pic/logo2.jpg" id="logo2" width=149 height=69 border=0 /></a></td>
 
     <td align="right">
-        <p><span><a href="work.html" class="suburls">Project</a></span>&nbsp;&#149;&nbsp;<a href="photo.html" class="suburls">Photo</a></p>
+        <p><span> &#x1F95D; <a href="work.html" class="suburls">Projects</a></span>&nbsp;&#149;&nbsp; &#x1F5A4; <a href="photo.html" class="suburls">Photo</a></p>
     </td>
   </tr>
 </table>
