--- a/photo1.html
+++ b/photo1.html
@@ -13,7 +13,7 @@
       <td align="left"><a href="index.html"><img src="pic/logo2.jpg" id="logo2" width=149 height=69 border=0 /></a></td>
 
     <td align="right">
-        <p><span> &#x1F4C7; <a href="photo1.html" class="suburls">First Page</a></span>&nbsp;&#149;&nbsp;<a href="photo.html" class="suburls">Prev Album</a></p>
+        <p><span> &#x1F4C7; <a href="photo1.html" class="suburls">First Page</a></span>&nbsp;&#149;&nbsp; &#x2708; <a href="photo.html" class="suburls">Prev Album</a></p>
     </td>
   </tr>
 </table>
