--- a/graph.html
+++ b/graph.html
@@ -17,7 +17,7 @@
   </tr>
 </table>
 
-<p class="body" align="center">My gallary of painting and design. All rights reserved.</p>
+<p class="body" align="center"> &#x1F9F8; My gallary of painting and design. All rights reserved. &#x2728;</p>
 
 </body>
 </html>
